Fixing scrollbars

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,7 +80,7 @@
 
 	html, body {
 		height: 100%;
-		overflow-x: hidden;
+		/*overflow-x: scroll;*/
 		width: 100%;
 	}
 
